Se agrega un comentario

--- a/editar.html
+++ b/editar.html
@@ -102,3 +102,4 @@
   <script src="https://kit.fontawesome.com/89b03c48a4.js" crossorigin="anonymous"></script>
 </body>
 </html>
+<!-- esto es una prueba -->
