creacion logica see-products.js

--- a/editar.html
+++ b/editar.html
@@ -38,7 +38,8 @@
           <h2 class="agregarProducto__titulo">Edicion de producto</h2>
         </div>
         <div class="agregarProd__containerForm">
-        <form class="agregarProd__datos" data-form>
+          <!-- DATA FORM↓↓ -->
+        <form class="agregarProd__datos" data-form> 
           <input class="form-control" type="text" placeholder="Categoria" required data-category>
           <input class="form-control" type="text" placeholder="Url de la imagen" required data-urlImg>
           <div class="imagenMuestra" data-printImg></div>
