--- a/seeProduct.html
+++ b/seeProduct.html
@@ -39,14 +39,14 @@
 
    <!-- VER PRODUCTO -->
   <section class="productSelect">
-    <div class="productSelect__container">
-        <div class="productSelect__container__caracterist">
+    <div class="productSelect__container" data-productSelect-container>
+        <!-- <div class="productSelect__container__caracterist">
             <h2 class="productSelect__nombre">Pantalón Taverniti</h2>
             <div class="imgYdescrip">
                 <img src="images E-comerce\imgEdiversos1.jpg" class="productSelect__img">
-                <p class="productSelect__p">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio, officiis iure architecto possimus dicta numquam aspernatur id maiores dolorum laboriosam velit distinctio magni minus soluta nobis inventore repellat? Repudiandae non eveniet facilis facere, iusto nisi sit eaque possimus amet, libero recusandae vero neque dolores debitis.</p>
+                <p class="productSelect__description" data-description>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio, officiis iure architecto possimus dicta numquam aspernatur id maiores dolorum laboriosam velit distinctio magni minus soluta nobis inventore repellat? Repudiandae non eveniet facilis facere, iusto nisi sit eaque possimus amet, libero recusandae vero neque dolores debitis.</p>
             </div>
-            <h4 class="productSelect__precio">$ 60.00</h4>
+            <h4 class="productSelect__precio">$ 60.00</h4> -->
         </div>
     </div>
       </section> 
@@ -206,6 +206,7 @@
 <body>
     <script src="https://kit.fontawesome.com/89b03c48a4.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+    <script type="module" src="controllers/see-productos-controller.js"></script>
     <script type="module" src="controllers/readD-productos-controller.js"></script>
   </body>
 </html>
